--- a/views/student/resultTable.hbs
+++ b/views/student/resultTable.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-    <form class="semester labelSemester ml-2 mb-2" action="/student/result" method="GET">
+    <form class="semester labelSemester ml-2 mb-2" action="/student/resulttable" method="GET">
         <span align="center">
             <span>Năm học:</span>
             <select class="semester" style="border: none; color:blanchedalmond" name="year"
