Change Password, phúc khảo

--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -1,20 +1,22 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-4">
-		    
-		    <label>Current Password</label>
+		<form class="col-md-4" action="/changePassword" method="Post">
+		    <label>Mật khẩu cũ</label>
 		    <div class="form-group pass_show"> 
-                <input type="password" value="" class="form-control" placeholder="Current Password"> 
+                <input type="password"  name="currentPassword" class="form-control" autocomplete="off" required> 
             </div> 
-		       <label>New Password</label>
+		       <label>Mật khẩu mới</label>
             <div class="form-group pass_show"> 
-                <input type="password" value="" class="form-control" placeholder="New Password"> 
+                <input type="password" id="newPassword1" name="newPassword1"  class="form-control" autocomplete="off" required> 
             </div> 
-		       <label>Confirm Password</label>
+		       <label>Xác nhận</label>
             <div class="form-group pass_show"> 
-                <input type="password" value="" class="form-control" placeholder="Confirm Password"> 
+                <input type="password" id="newPassword2" name="newPassword2" class="form-control" autocomplete="off" required> 
             </div> 
-            
-		</div>  
+            <div class="modal-footer d-flex justify-content-center">
+                <button class="btn btn-danger" type="submit">Xác nhận</button>
+            </div>
+            <input type="hidden" name="username" id="username" value="{{user.username}}">
+		</form>  
 	</div>
 </div>
