--- a/public/css/styleProfile.css
+++ b/public/css/styleProfile.css
@@ -1,104 +1,133 @@
-.emp-profile{
-    padding: 3%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    border-radius: 0.5rem;
-    background: #fff;
+.emp-profile {
+  padding: 3%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  border-radius: 0.5rem;
+  background: #fff;
 }
-.profile-img{
-    text-align: center;
+.profile-img {
+  text-align: center;
 }
-.profile-img img{
-    width: 70%;
-    height: 100%;
+.profile-img img {
+  width: 70%;
+  height: 100%;
 }
 .profile-img .file {
-    position: relative;
-    overflow: hidden;
-    margin-top: -20%;
-    width: 70%;
-    border: none;
-    border-radius: 0;
-    font-size: 15px;
-    background: #212529b8;
+  position: relative;
+  overflow: hidden;
+  margin-top: -20%;
+  width: 70%;
+  border: none;
+  border-radius: 0;
+  font-size: 15px;
+  background: #212529b8;
 }
 .profile-img .file input {
-    position: absolute;
-    opacity: 0;
-    right: 0;
-    top: 0;
+  position: absolute;
+  opacity: 0;
+  right: 0;
+  top: 0;
 }
-.profile-head h5{
-    color: #333;
+.profile-head h5 {
+  color: #333;
 }
-.profile-head h6{
-    color: #0062cc;
+.profile-head h6 {
+  color: #0062cc;
 }
-.profile-edit-btn{
-    border: none;
-    border-radius: 1.5rem;
-    width: 70%;
-    padding: 2%;
-    font-weight: 600;
-    color: #6c757d;
-    cursor: pointer;
+.profile-edit-btn {
+  border: none;
+  border-radius: 1.5rem;
+  width: 70%;
+  padding: 2%;
+  font-weight: 600;
+  color: #6c757d;
+  cursor: pointer;
 }
-.proile-rating{
-    font-size: 12px;
-    color: #818182;
-    margin-top: 5%;
+.proile-rating {
+  font-size: 12px;
+  color: #818182;
+  margin-top: 5%;
 }
-.proile-rating span{
-    color: #495057;
-    font-size: 15px;
-    font-weight: 600;
+.proile-rating span {
+  color: #495057;
+  font-size: 15px;
+  font-weight: 600;
 }
-.profile-head .nav-tabs{
-    margin-bottom:5%;
+.profile-head .nav-tabs {
+  margin-bottom: 5%;
 }
-.profile-head .nav-tabs .nav-link{
-    font-weight:600;
-    border: none;
+.profile-head .nav-tabs .nav-link {
+  font-weight: 600;
+  border: none;
 }
-.profile-head .nav-tabs .nav-link.active{
-    border: none;
-    border-bottom:2px solid #0062cc;
+.profile-head .nav-tabs .nav-link.active {
+  border: none;
+  border-bottom: 2px solid #0062cc;
 }
-.profile-work{
-    padding: 14%;
-    margin-top: -15%;
+.profile-work {
+  padding: 14%;
+  margin-top: -15%;
 }
-.profile-work p{
-    font-size: 12px;
-    color: #818182;
-    font-weight: 600;
-    margin-top: 10%;
+.profile-work p {
+  font-size: 12px;
+  color: #818182;
+  font-weight: 600;
+  margin-top: 10%;
 }
-.profile-work a{
-    text-decoration: none;
-    color: #495057;
-    font-weight: 600;
-    font-size: 14px;
+.profile-work a {
+  text-decoration: none;
+  color: #495057;
+  font-weight: 600;
+  font-size: 14px;
 }
-.profile-work ul{
-    list-style: none;
+.profile-work ul {
+  list-style: none;
 }
-.profile-tab label{
-    font-weight: 600;
+.profile-tab label {
+  font-weight: 600;
 }
-.profile-tab p{
-    font-weight: 600;
-    color: #0062cc;
+.profile-tab p {
+  font-weight: 600;
+  color: #0062cc;
 }
 .inputBox {
-    height: 34px;
-    line-height: 34px;
-    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s, -webkit-box-shadow 0.15s ease-in-out 0s;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(204, 204, 204);
-    border-image: initial;
-    border-radius: 4px;
-    padding: 6px 12px;
-    outline: none;
+  height: 34px;
+  line-height: 34px;
+  transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s,
+    -webkit-box-shadow 0.15s ease-in-out 0s;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(204, 204, 204);
+  border-image: initial;
+  border-radius: 4px;
+  padding: 6px 12px;
+  outline: none;
+}
+.pass_show {
+  position: relative;
+  margin-right: 15px;
+}
+
+.pass_show .ptxt {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  z-index: 1;
+  color: #f36c01;
+  margin-top: -10px;
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+
+.pass_show .ptxt:hover {
+  color: #333333;
+}
+
+.form-inline label {
+    align-items: center !important;
+    justify-content: left !important;
+}
+
+.md-form label {
+    width: 160px !important; 
 }
