--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -1,6 +1,9 @@
 {{#each success_msg}}
-<div class="alert alert-success" role="alert">
+<div class="alert alert-success"  role="alert">
     {{this}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 {{/each}}
 
@@ -8,11 +11,17 @@
 {{#each error_msg}}
 <div class="alert alert-danger" role="alert">
     {{this}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 {{/each}}
 
 {{#if error}}
 <div class="alert alert-danger" role="alert">
     {{error}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 {{/if}}
