--- a/views/student/reExamination.hbs
+++ b/views/student/reExamination.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-    <form class="semester labelSemester ml-2 mb-2" action="/student/resulttable" method="GET">
+    <form class="semester labelSemester ml-2 mb-2" action="/student/reExamination" method="GET">
         <span align="center">
             <span>Năm học:</span>
             <select class="semester" style="border: none; color:blanchedalmond" name="year"
@@ -26,47 +26,48 @@
         </span>
     </form>
 </div>
-
 <div class="card shadow mb-4">
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered" id="resultTable" width="100%" cellspacing="0">
+            <table class="table table-bordered" id="reExaminationTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>STT</th>
                         <th>MÔN HỌC</th>
-                        <th>15 PHÚT<sup>1</sup></th>
-                        <th>15 PHÚT<sup>2</sup></th>
-                        <th>1 TIẾT</th>
-                        <th>THI CUỐI KÌ</th>
-                        <th>TRUNG BÌNH</th>
+                        <th>NỘI DUNG</th>
+                        <th>PHẢN HỒI</th>
+                        <th>CHỈNH SỬA</th>
                     </tr>
                 </thead>
-
                 <tbody>
-                    {{#each listScoreView}}
+                    {{#each listReExaminationView}}
                     <tr>
-                        <td>{{id}}</td>
                         <td>{{subjectName}}</td>
-                        <td>{{score1}}</td>
-                        <td>{{score2}}</td>
-                        <td>{{score3}}</td>
-                        <td>{{score4}}</td>
-                        <td>{{gpa}}</td>
+                        <td>{{content}}</td>
+                        {{#if response}}
+                        <td>{{response}}</td>
+                        {{else}}
+                        <td>Giáo viên chưa phản hồi</td>
+                        {{/if}}
+                        <td style="width:100px"><i class="fa fa-pencil-square-o" data-toggle="modal"
+                                data-target="#{{dataTarget}}" aria-hidden="true"></i></td>
                     </tr>
                     {{/each}}
                 </tbody>
             </table>
         </div>
+
+        <div class="text-center">
+            <a href="" class="btn btn-primary btn-rounded mb-4" data-toggle="modal"
+                data-target="#modalReExaminationForm">TẠO
+                ĐƠN PHUC KHẢO</a>
+        </div>
+        <hr>
     </div>
 </div>
-
-
-
 <div class="modal fade" id="modalReExaminationForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <form class="modal-content" action="/student/reExamination" method="POST">
             <div class="modal-header text-center">
                 <h4 class="modal-title w-100 font-weight-bold">Tạo đơn phúc khảo</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -76,21 +77,22 @@
             <div class="modal-body mx-3">
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-subjectName">Môn học</label>
-                    <select id="defaultForm-subjectName" class="form-control validate">
+                    <select name="subjectID" id="defaultForm-subjectName" class="form-control validate">
                         {{#each listSubjectView}}
-                        <option value="{{subject}}">{{subjectName}}</option>
+                        <option value="{{subjectID}}">{{subjectName}}</option>
                         {{/each}}
                     </select>
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-note">Nội dung phúc khảo</label>
-                    <textarea name="comment" class="form-control"></textarea>
+                    <textarea name="content" class="form-control"></textarea>
                 </div>
-
+                <input type="hidden" name="studentID" id="studentID" value="{{user.username}}">
+                <input type="hidden" name="classID" id="classID" value="{{user.classID}}">
             </div>
             <div class="modal-footer d-flex justify-content-center">
                 <button class="btn btn-danger">Xác nhận</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
