update Survey student, fix screen

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -12,9 +12,9 @@
 
   <!-- Nav Item - Dashboard -->
   <li class="nav-item active">
-    <a class="nav-link" href="/">
+    <a class="nav-link">
       <i class="fas fa-fw fa-tachometer-alt"></i>
-      <span>Thông tin chung</span></a>
+      <span>Xin chào</span></a>
   </li>
 
   <!-- Divider -->
