fix update profile

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -14,7 +14,7 @@
   <li class="nav-item active">
     <a class="nav-link">
       <i class="fas fa-fw fa-tachometer-alt"></i>
-      <span>Xin chào</span></a>
+      <span>{{#hello user}}{{/hello}}</span></a>
   </li>
 
   <!-- Divider -->
